# AdaShip

./: .gitignore  .replit  CMakeLists.txt  Constants.h  Game.cpp  Game.h  Grid.cpp  Grid.h  GridBoard.cpp  GridBoard.h  Menu.cpp  Menu.h  README.md  Settings.cpp  Settings.h  adaship_config.ini  main.cpp  mini.h
Helpers/: ConsoleColor.h  Logger.h  csvhelper.cpp  csvhelper.h  iohelper.cpp  iohelper.h  mathshelper.cpp  mathshelper.h  stringhelper.cpp  stringhelper.h
Models/: Board.cpp  Board.h  Coord.h  MapEntity.cpp  MapEntity.h  Mine.cpp  Mine.h  PlayerBoard.cpp  PlayerBoard.h  Ship.cpp  Ship.h
Players/: AiPlayer.cpp  AiPlayer.h  Player.cpp  Player.h  PlayerType.h  RealPlayer.cpp  RealPlayer.h
diagrams/: UML.puml
